# acr122u_driver

./: CMakeLists.txt  Makefile  README.md  configure.h.in
inc/: acr122u_usb.h  apdu.h  ccid.h  configure.h
src/: CMakeLists.txt  acr122u_usb.c  apdu.c  ccid.c
test_app/: CMakeLists.txt  main.c
